--- a/.styleci.yml
+++ b/.styleci.yml
@@ -7,7 +7,9 @@ linting: true
 enabled:
   - concat_with_spaces
   - linebreak_after_opening_tag
+  - no_blank_lines_before_namespace
 
 disabled:
   - concat_without_spaces
   - blank_line_after_opening_tag
+  - single_blank_line_before_namespace
