teknomavi/common bağımlılığı sabitlendi

--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
   },
   "require": {
     "php": "> 5.4",
-    "teknomavi/common": "dev-master"
+    "teknomavi/common": "~2.0"
   },
   "require-dev": {
   },
