--- a/composer.json
+++ b/composer.json
@@ -27,13 +27,18 @@
     "teknomavi/common": "~2.0"
   },
   "require-dev": {
+    "phpunit/phpunit": "~4.8|~5.0"
   },
   "suggest": {
   },
   "autoload": {
-    "psr-4": {"Teknomavi\\NVI\\": "src/"}
+    "psr-4": {
+      "Teknomavi\\NVI\\": "src/"
+    }
   },
   "autoload-dev": {
-    "psr-4": {"Teknomavi\\NVI\\": "tests/"}
+    "psr-4": {
+      "Teknomavi\\Tests\\": "tests/Teknomavi/Tests"
+    }
   }
 }
