--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
     "teknomavi/common": "~2.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "~4.8|~5.0"
+    "phpunit/phpunit": "~4.8|~5.0",
+    "squizlabs/php_codesniffer": "~2.0"
   },
   "suggest": {
   },
